test/classes/errors/nilability-init-var/init-var-nonnil-owned-from-nonnil-shared.good
init-var-nonnil-owned-from-nonnil-shared.chpl:9: error: invalid copy-initialization
init-var-nonnil-owned-from-nonnil-shared.chpl:9: error: cannot create an owned variable from a shared class instance
